ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: myservice.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
    - host: myservice-back-end.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-end
                port:
                  number: 80
